--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -329,6 +329,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:id="@+id/layout"
                     android:orientation="horizontal">
 
                     <LinearLayout
@@ -345,14 +346,13 @@
                             android:textColor="@color/black"
                             android:textSize="16sp" />
 
-                        <EditText
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:id="@+id/tv_region"
                             android:layout_marginStart="20dp"
                             android:layout_marginTop="5dp"
-                            android:background="@android:color/transparent"
-                            android:inputType="number"
-                            android:paddingStart="2dp"
+                            android:textSize="15sp"
                             android:text="Karachi" />
 
                     </LinearLayout>
