--- a/app/src/main/res/layout/fragment_responsible.xml
+++ b/app/src/main/res/layout/fragment_responsible.xml
@@ -10,7 +10,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
@@ -31,6 +31,7 @@
             android:background="@android:color/transparent"
             android:layout_marginStart="20dp"
             android:layout_marginTop="35dp"
+            android:layout_marginBottom="10dp"
             android:text="Peter Dan"
             android:textSize="15sp" />
 
