--- a/app/src/main/res/layout/fragment_bank.xml
+++ b/app/src/main/res/layout/fragment_bank.xml
@@ -135,6 +135,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/bank_layout"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp">
 
@@ -150,7 +151,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView10"
+                        android:id="@+id/Bank"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
@@ -176,7 +177,7 @@
                         android:background="@color/viewGrey"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                        app:layout_constraintTop_toBottomOf="@+id/Bank" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
