--- a/app/src/main/res/layout/row_item_general_bottom.xml
+++ b/app/src/main/res/layout/row_item_general_bottom.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:padding="7dp"
         android:text="Title"
         android:textSize="17sp"
         android:textColor="@color/black"
