--- a/app/src/main/res/drawable/create_general_edt_background.xml
+++ b/app/src/main/res/drawable/create_general_edt_background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <solid android:color="@android:color/white" />
     <stroke
-        android:color="#C3C3C3"
+        android:color="@color/TopviewGrey"
         android:dashWidth="10px"
-        android:width="2dp"/>
+        android:width="1dp"/>
 
     <padding
         android:bottom="10dp"
