--- a/app/src/main/res/layout/activity_create_general_data.xml
+++ b/app/src/main/res/layout/activity_create_general_data.xml
@@ -159,8 +159,10 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
                     android:paddingStart="4dp"
                     android:background="#fff"
                     android:text="STRN"
