--- a/app/src/main/res/drawable/create_general_edt_background.xml
+++ b/app/src/main/res/drawable/create_general_edt_background.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="@android:color/white" />
-    <stroke
-        android:color="@color/TopviewGrey"
-        android:dashWidth="10px"
-        android:width="1dp"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape
+            android:shape="rectangle">
+            <solid android:color="@color/viewGrey" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/TopviewGrey"
+                android:dashWidth="10px" />
 
-    <padding
-        android:bottom="10dp"
-        android:left="10dp"
-        android:right="10dp"
-        android:top="10dp"/>
+            <padding
+                android:bottom="10dp"
+                android:left="10dp"
+                android:right="10dp"
+                android:top="10dp" />
 
-    <corners
-        android:radius="3dp"/>
+            <corners android:radius="3dp" />
 
-</shape>
+        </shape>
+    </item>
+   <!-- <item android:drawable="@drawable/bg"
+        android:bottom="20dp"
+        android:left="20dp"
+        android:right="20dp"
+        android:top="20dp"/>-->
+
+</layer-list>
