--- a/app/src/main/res/layout/activity_create_general_data.xml
+++ b/app/src/main/res/layout/activity_create_general_data.xml
@@ -4,13 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/viewGrey"
     tools:context=".CreateGeneralDataActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:elevation="10dp"
+            android:background="@drawable/toolbar_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+            <ImageView
+                android:id="@+id/add_dsl_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:visibility="gone"
+                android:src="@drawable/baseline_menu"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add General Detail"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/logout"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <!--<TextView
             android:id="@+id/createGeneral"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,13 +67,13 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/createGeneral">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/TextInputLayoutStyle"
@@ -162,7 +209,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:paddingStart="4dp"
-                    android:background="#fff"
+                    android:background="@color/viewGrey"
                     android:text="STRN"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
@@ -170,6 +217,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:backgroundTint="@color/viewGrey"
                     android:gravity="end"
                     android:layout_marginEnd="2dp"
                     android:layout_marginTop="2dp"
@@ -183,7 +231,7 @@
                         android:layout_height="15dp"
                         android:layout_marginEnd="52dp"
                         android:checked="false"
-                        android:background="#fff"
+                        android:background="@color/viewGrey"
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
                         android:textOff="off"
@@ -403,7 +451,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:paddingStart="10dp"
-                    android:background="#fff"
+                    android:background="@color/viewGrey"
                     android:layout_marginTop="2dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginStart="2dp"
@@ -417,7 +465,7 @@
                     android:gravity="end"
                     android:layout_marginEnd="2dp"
                     android:layout_marginTop="2dp"
-                    android:background="#fff"
+                    android:background="@color/viewGrey"
                     android:layout_marginBottom="2dp"
                     android:orientation="horizontal">
 
@@ -427,7 +475,7 @@
                         android:layout_height="15dp"
                         android:layout_marginEnd="10dp"
                         android:checked="false"
-                        android:background="#fff"
+                        android:background="@color/viewGrey"
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
                         android:textOff="off"
