--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:src="@drawable/ic_plus"
-        android:tint="@color/white"
+        app:tint="@color/white"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
