--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/viewGrey"
+    android:background="@drawable/bg"
     tools:context=".CreateGeneralDataActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
