Payment Adapter And Create Payment Validation

--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/rv_item_address"
